--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,1 +1,146 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Rubik:wght@300;400;500;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[12];
+      grid-template-columns: repeat(12, 1fr);
+  background-color: #fef8f5;
+  font-family: "Rubik", sans-serif;
+}
+
+header {
+  padding-top: 2.5rem;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 10;
+  grid-column: 2/12;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 1fr max-content;
+      grid-template-columns: auto 1fr -webkit-max-content;
+      grid-template-columns: auto 1fr max-content;
+  z-index: 1;
+}
+
+header .logo {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+header nav {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+}
+
+header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header nav ul li {
+  margin-right: 0.5rem;
+}
+
+header nav ul li a {
+  padding: 1.25rem 1.5rem;
+  font-family: Rubik;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+}
+
+header nav ul li:last-child {
+  margin-right: 0;
+}
+
+header nav ul li:last-child a {
+  background-color: #ee4d47;
+  border-radius: 0.25rem;
+}
+
+.hero {
+  grid-column: 1/-1;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 4;
+  grid-row: 1/5;
+  background-image: url(/src/asset/Scene.svg);
+  width: 81em;
+  height: 950px;
+  z-index: 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[12];
+      grid-template-columns: repeat(12, 1fr);
+  -ms-grid-rows: 8rem max-content 3.75rem max-content 13rem max-content;
+      grid-template-rows: 8rem -webkit-max-content 3.75rem -webkit-max-content 13rem -webkit-max-content;
+      grid-template-rows: 8rem max-content 3.75rem max-content 13rem max-content;
+  color: #ffffff;
+}
+
+.hero h1 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 7;
+  grid-column: 2/9;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  font-family: "DM Serif Display", serif;
+  font-size: 6.25rem;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0em;
+}
+
+.hero .btn {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  padding: 1.25rem 1.5rem;
+  background-color: #ee4d47;
+  border-radius: 0.25rem;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  color: #ffffff;
+  font-family: Rubik;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+}
+
+.hero img {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 1;
+  grid-row: 6/7;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+}
+/*# sourceMappingURL=style.css.map */
