--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,6 +7,18 @@
 
 html {
   font-size: 16px;
+  @media screen and (max-width: 87.5em) {
+    font-size: 15.5px;
+  }
+  @media screen and (max-width: 81.25em) {
+    font-size: 14px;
+  }
+  @media screen and (max-width: 75em) {
+    font-size: 12px;
+  }
+  //   @media screen and (max-width: 75em) {
+  //     font-size: 14px;
+  //   }
   //   @media screen and (max-width: 75em) {
   //     font-size: 14px;
   //   }
@@ -27,19 +39,24 @@ a {
 body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  //   grid-template-columns: 1fr max-content 1fr;
   background-color: #fef8f5;
 
   font-family: "Rubik", sans-serif;
 }
 
 header {
-  padding-top: 2.5rem;
-  grid-column: 2/12;
-  grid-row: 1/2;
+  padding: 1.5rem 0;
+  width: 85%;
+  margin: 0 auto;
+  background-color: yellowgreen;
   display: grid;
-  grid-template-columns: auto 1fr max-content;
+  grid-template-columns: max-content 1fr max-content;
   z-index: 1;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  align-items: center;
 
   .logo {
     grid-column: 1/2;
@@ -53,8 +70,7 @@ header {
         margin-right: 0.5rem;
         a {
           padding: 1.25rem 1.5rem;
-          font-family: Rubik;
-          font-size: 16px;
+          font-size: 1rem;
           font-weight: 700;
           letter-spacing: 0.05em;
           color: #ffffff;
@@ -75,24 +91,28 @@ header {
 .hero {
   grid-column: 1/-1;
   grid-row: 1/5;
-  background-image: url(/src/asset/Scene.svg);
-  width: 81em;
+  background-image: url(/src/asset/back.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
   height: 950px;
   z-index: 0;
 
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 8rem max-content 3.75rem max-content 13rem max-content;
+  grid-template-rows: 8rem max-content 3.75rem max-content 11.25rem max-content;
   color: #ffffff;
 
   h1 {
-    grid-column: 2/9;
+    grid-column: 2/7;
     grid-row: 2/3;
     font-family: "DM Serif Display", serif;
     font-size: 6.25rem;
+    line-height: 6.25rem;
     font-style: normal;
     font-weight: 400;
     letter-spacing: 0em;
+    z-index: 1;
   }
   .btn {
     grid-row: 4/5;
@@ -102,14 +122,19 @@ header {
     border-radius: 0.25rem;
     justify-self: start;
     color: #ffffff;
-    font-family: Rubik;
     font-size: 1rem;
     font-weight: 700;
     letter-spacing: 0.05em;
+    z-index: 1;
   }
-  img {
+  .truck {
     grid-row: 6/7;
     grid-column: 1/4;
+    background-image: url(/src/asset/mobel.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 37.5rem;
+    height: 24.75rem;
   }
 }
 
