--- a/src/style/style.css
+++ b/src/style/style.css
@@ -41,20 +41,20 @@ body {
   display: grid;
   -ms-grid-columns: (1fr)[12];
       grid-template-columns: repeat(12, 1fr);
+  -ms-grid-rows: max-content max-content max-content;
+      grid-template-rows: -webkit-max-content -webkit-max-content -webkit-max-content;
+      grid-template-rows: max-content max-content max-content;
   background-color: #fef8f5;
   font-family: "Rubik", sans-serif;
 }
 
 header {
   padding: 1.5rem 0;
-  width: 85%;
-  margin: 0 auto;
-  background-color: yellowgreen;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: max-content 1fr max-content;
-      grid-template-columns: -webkit-max-content 1fr -webkit-max-content;
-      grid-template-columns: max-content 1fr max-content;
+  -ms-grid-columns: 1fr max-content 2fr max-content 1fr;
+      grid-template-columns: 1fr -webkit-max-content 2fr -webkit-max-content 1fr;
+      grid-template-columns: 1fr max-content 2fr max-content 1fr;
   z-index: 1;
   position: fixed;
   left: 0;
@@ -66,15 +66,15 @@ header {
 }
 
 header .logo {
-  -ms-grid-column: 1;
+  -ms-grid-column: 2;
   -ms-grid-column-span: 1;
-  grid-column: 1/2;
+  grid-column: 2/3;
 }
 
 header nav {
-  -ms-grid-column: 3;
+  -ms-grid-column: 4;
   -ms-grid-column-span: 1;
-  grid-column: 3/4;
+  grid-column: 4/5;
 }
 
 header nav ul {
@@ -113,7 +113,6 @@ header nav ul li:last-child a {
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 950px;
   z-index: 0;
   display: -ms-grid;
   display: grid;
@@ -172,5 +171,78 @@ header nav ul li:last-child a {
   background-repeat: no-repeat;
   width: 37.5rem;
   height: 24.75rem;
+}
+
+.about {
+  grid-column: 3/-2;
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 1;
+  grid-row: 6/7;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 36rem max-content;
+      grid-template-columns: 36rem -webkit-max-content;
+      grid-template-columns: 36rem max-content;
+  -ms-grid-rows: 4.625rem auto 2.5rem auto 4.375rem auto;
+      grid-template-rows: 4.625rem auto 2.5rem auto 4.375rem auto;
+}
+
+.about h2 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  font-family: Rubik;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2.5rem;
+  letter-spacing: 0.1em;
+  text-align: left;
+  color: #ee4d47;
+}
+
+.about .classic {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+  font-size: 1.125rem;
+  font-weight: 300;
+  line-height: 2.5rem;
+  color: #402b2b;
+}
+
+.about .special {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 1;
+  grid-row: 6/7;
+  background: #fcddd4;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #402b2b;
+  border-left: 10px solid #ed4d47;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 1.875rem 3.419375rem;
+}
+
+.about .delivery-man {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  grid-row: 1/-1;
+  background-image: url(/src//asset/about.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 31.125rem;
+  height: 30rem;
 }
 /*# sourceMappingURL=style.css.map */
