--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -39,6 +39,7 @@ a {
 body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: max-content max-content max-content;
   background-color: #fef8f5;
 
   font-family: "Rubik", sans-serif;
@@ -46,11 +47,9 @@ body {
 
 header {
   padding: 1.5rem 0;
-  width: 85%;
-  margin: 0 auto;
-  background-color: yellowgreen;
+  //   background-color: yellowgreen;
   display: grid;
-  grid-template-columns: max-content 1fr max-content;
+  grid-template-columns: 1fr max-content 2fr max-content 1fr;
   z-index: 1;
   position: fixed;
   left: 0;
@@ -59,10 +58,10 @@ header {
   align-items: center;
 
   .logo {
-    grid-column: 1/2;
+    grid-column: 2/3;
   }
   nav {
-    grid-column: 3/4;
+    grid-column: 4/5;
     ul {
       display: flex;
 
@@ -95,7 +94,6 @@ header {
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 950px;
   z-index: 0;
 
   display: grid;
@@ -138,5 +136,54 @@ header {
   }
 }
 
-// main {
-// }
+.about {
+  grid-column: 3/-2;
+  grid-row: 6/7;
+
+  display: grid;
+  grid-template-columns: 36rem max-content;
+  grid-template-rows: 4.625rem auto 2.5rem auto 4.375rem auto;
+
+  h2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    font-family: Rubik;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2.5rem;
+    letter-spacing: 0.1em;
+    text-align: left;
+    color: #ee4d47;
+  }
+  .classic {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    font-size: 1.125rem;
+    font-weight: 300;
+    line-height: 2.5rem;
+    color: #402b2b;
+  }
+  .special {
+    grid-column: 1/2;
+    grid-row: 6/7;
+    background: #fcddd4;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #402b2b;
+    border-left: 10px solid #ed4d47;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+
+    padding: 1.875rem 3.419375rem;
+  }
+  .delivery-man {
+    grid-column: 2/3;
+    grid-row: 1/-1;
+    background-image: url(/src//asset/about.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 31.125rem;
+    height: 30rem;
+  }
+}
