--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -147,13 +147,11 @@ header {
   h2 {
     grid-column: 1/2;
     grid-row: 2/3;
-    font-family: Rubik;
     font-size: 1.5rem;
     font-style: normal;
     font-weight: 700;
     line-height: 2.5rem;
     letter-spacing: 0.1em;
-    text-align: left;
     color: #ee4d47;
   }
   .classic {
@@ -181,6 +179,46 @@ header {
     grid-column: 2/3;
     grid-row: 1/-1;
     background-image: url(/src//asset/about.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 31.125rem;
+    height: 30rem;
+  }
+}
+
+.how-to {
+  grid-column: 3/-2;
+  grid-row: 7/8;
+
+  display: grid;
+  grid-template-columns: max-content auto;
+  grid-template-rows: max-content 2.5rem auto;
+
+  h2 {
+    align-self: flex-end;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2.5rem;
+    letter-spacing: 0.1em;
+    color: #ee4d47;
+  }
+  .classic {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    font-size: 1.125rem;
+    font-weight: 300;
+    line-height: 2.5rem;
+    color: #402b2b;
+  }
+
+  .customer-care {
+    grid-column: 1/2;
+    grid-row: 1/-1;
+
+    background-image: url(/src//asset/apply.svg);
     background-size: contain;
     background-repeat: no-repeat;
     width: 31.125rem;
