--- a/src/style/style.css
+++ b/src/style/style.css
@@ -55,7 +55,7 @@ header {
   -ms-grid-columns: 1fr max-content 2fr max-content 1fr;
       grid-template-columns: 1fr -webkit-max-content 2fr -webkit-max-content 1fr;
       grid-template-columns: 1fr max-content 2fr max-content 1fr;
-  z-index: 1;
+  z-index: 5;
   position: fixed;
   left: 0;
   right: 0;
@@ -299,5 +299,140 @@ header nav ul li:last-child a {
   background-repeat: no-repeat;
   width: 31.125rem;
   height: 30rem;
+}
+
+.faq {
+  grid-column: 3/-1;
+  -ms-grid-row: 8;
+  -ms-grid-row-span: 1;
+  grid-row: 8/9;
+  position: relative;
+  z-index: 1;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: subgrid;
+      grid-template-columns: subgrid;
+  -ms-grid-rows: 6.375rem 7.625rem max-content 2.75rem 12.5rem 5rem 5.625rem auto 13.875rem;
+      grid-template-rows: 6.375rem 7.625rem -webkit-max-content 2.75rem 12.5rem 5rem 5.625rem auto 13.875rem;
+      grid-template-rows: 6.375rem 7.625rem max-content 2.75rem 12.5rem 5rem 5.625rem auto 13.875rem;
+}
+
+.faq::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 10%;
+  bottom: 0;
+  background: #fdede8;
+  border-top-left-radius: 100px;
+  z-index: 0;
+}
+
+.faq h2 {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2.5rem;
+  letter-spacing: 0.1em;
+  color: #ee4d47;
+  z-index: 1;
+  align-self: flex-end;
+}
+
+.faq .classic {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 1;
+  grid-row: 5/6;
+  color: #402b2b;
+  z-index: 1;
+  font-family: "DM Serif Display", serif;
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 4.1875rem;
+  letter-spacing: 0em;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.faq .man-thinking {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 5;
+  grid-row: 2/7;
+  background-image: url(/src//asset/faq.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 31.125rem;
+  height: 30rem;
+  z-index: 1;
+}
+
+.faq .questions {
+  z-index: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  -ms-grid-row: 8;
+  -ms-grid-row-span: 1;
+  grid-row: 8/9;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (34.375rem)[2] 1fr;
+      grid-template-columns: repeat(2, 34.375rem) 1fr;
+  grid-row-gap: 0.625rem;
+  grid-column-gap: 1.25rem;
+}
+
+.faq .questions > li {
+  background-color: #ffffff;
+  padding: 1.5625rem 7.17125rem;
+  padding-left: 2.1875rem;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  position: relative;
+}
+
+.faq .questions > li:nth-child(even) {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+}
+
+.faq .questions > li:nth-child(odd) {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+.faq .questions > li::before {
+  content: "";
+  position: absolute;
+  background-image: url(/src/asset/+.svg);
+  right: 2.1875rem;
+  top: 50%;
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.faq .answers {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
