--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -50,7 +50,7 @@ header {
   //   background-color: yellowgreen;
   display: grid;
   grid-template-columns: 1fr max-content 2fr max-content 1fr;
-  z-index: 1;
+  z-index: 5;
   position: fixed;
   left: 0;
   right: 0;
@@ -223,5 +223,105 @@ header {
     background-repeat: no-repeat;
     width: 31.125rem;
     height: 30rem;
+  }
+}
+
+.faq {
+  grid-column: 3/-1;
+  grid-row: 8/9;
+  position: relative;
+  z-index: 1;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 10%;
+    bottom: 0;
+    background: #fdede8;
+    border-top-left-radius: 100px;
+    z-index: 0;
+  }
+
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-template-rows: 6.375rem 7.625rem max-content 2.75rem 12.5rem 5rem 5.625rem auto 13.875rem;
+
+  h2 {
+    align-self: flex-end;
+    grid-column: 1/2;
+    grid-row: 3/4;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2.5rem;
+    letter-spacing: 0.1em;
+    color: #ee4d47;
+    z-index: 1;
+    align-self: flex-end;
+  }
+  .classic {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    color: #402b2b;
+    z-index: 1;
+    font-family: "DM Serif Display", serif;
+    font-size: 3rem;
+    font-weight: 400;
+    line-height: 4.1875rem;
+    letter-spacing: 0em;
+    align-self: flex-start;
+  }
+
+  .man-thinking {
+    grid-column: 2/3;
+    grid-row: 2/7;
+    background-image: url(/src//asset/faq.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 31.125rem;
+    height: 30rem;
+    z-index: 1;
+  }
+  .questions {
+    z-index: 1;
+    grid-column: 1/4;
+    grid-row: 8/9;
+    display: grid;
+    grid-template-columns: repeat(2, 34.375rem) 1fr;
+    grid-row-gap: 0.625rem;
+    grid-column-gap: 1.25rem;
+
+    & > li {
+      &:nth-child(even) {
+        grid-column: 2/3;
+      }
+      &:nth-child(odd) {
+        grid-column: 1/2;
+      }
+
+      background-color: #ffffff;
+      padding: 1.5625rem 7.17125rem;
+      padding-left: 2.1875rem;
+      font-size: 1.125rem;
+      font-style: normal;
+      font-weight: 500;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        background-image: url(/src/asset/+.svg);
+        right: 2.1875rem;
+        top: 50%;
+        width: 1.25rem;
+        height: 1.25rem;
+        transform: translateY(-50%);
+        cursor: pointer;
+      }
+    }
+  }
+  .answers {
+    display: none;
   }
 }
