--- a/src/style/style.css
+++ b/src/style/style.css
@@ -226,7 +226,7 @@ header nav ul li:last-child a {
   font-size: 1.5rem;
   font-weight: 500;
   color: #402b2b;
-  border-left: 10px solid #ed4d47;
+  border-left: 0.625rem solid #ed4d47;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   padding: 1.875rem 3.419375rem;
@@ -405,6 +405,8 @@ header nav ul li:last-child a {
   font-style: normal;
   font-weight: 500;
   position: relative;
+  cursor: pointer;
+  border-radius: 0.625rem;
 }
 
 .faq .questions > li:nth-child(even) {
@@ -429,10 +431,120 @@ header nav ul li:last-child a {
   height: 1.25rem;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  cursor: pointer;
 }
 
 .faq .answers {
   display: none;
+}
+
+.contact {
+  grid-column: 1/-2;
+  -ms-grid-row: 10;
+  -ms-grid-row-span: 2;
+  grid-row: 10/12;
+  background-image: url(/src/asset/footerBg.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 48rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 3.75rem 13.125rem auto 4.375rem 11.25rem max-content 8.25rem;
+      grid-template-rows: 3.75rem 13.125rem auto 4.375rem 11.25rem -webkit-max-content 8.25rem;
+      grid-template-rows: 3.75rem 13.125rem auto 4.375rem 11.25rem max-content 8.25rem;
+  -ms-grid-columns: (1fr)[12];
+      grid-template-columns: repeat(12, 1fr);
+}
+
+.contact p {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
+  grid-column: 2/6;
+  color: #ffffff;
+  padding: 0.625rem 2.5rem;
+  padding-right: 0;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.875rem;
+  border-left: 0.625rem solid #ed4d47;
+}
+
+.contact form {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2/5;
+  -ms-grid-column: 7;
+  -ms-grid-column-span: 5;
+  grid-column: 7/12;
+  padding: 3.25rem 4.6875rem;
+  background-color: #ffffff;
+  border-radius: 0.625rem;
+  -webkit-box-shadow: 0px 1.25rem 2.5rem 0px #ee4d471a;
+          box-shadow: 0px 1.25rem 2.5rem 0px #ee4d471a;
+}
+
+.contact form label {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 2.5rem;
+  margin-bottom: 0.625rem;
+}
+
+.contact form input[type="text"],
+.contact form input[type="email"] {
+  height: 3.75rem;
+  width: 25rem;
+  border-radius: 0.3125rem;
+  border: 1px solid #ee4d4780;
+  margin-bottom: 1.875rem;
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 2.5rem;
+  padding: 0.75rem 2.5rem;
+  -webkit-box-shadow: 0px 1.25rem 2.5rem 0px #ee4d4733;
+          box-shadow: 0px 1.25rem 2.5rem 0px #ee4d4733;
+}
+
+.contact form input[type="text"]:focus,
+.contact form input[type="email"]:focus {
+  border: 0.125rem solid #ee4d47;
+  outline: 0.125rem solid #ee4d47;
+}
+
+.contact form input[type="text"]::-webkit-input-placeholder,
+.contact form input[type="email"]::-webkit-input-placeholder {
+  font-weight: 300;
+}
+
+.contact form input[type="text"]:-ms-input-placeholder,
+.contact form input[type="email"]:-ms-input-placeholder {
+  font-weight: 300;
+}
+
+.contact form input[type="text"]::-ms-input-placeholder,
+.contact form input[type="email"]::-ms-input-placeholder {
+  font-weight: 300;
+}
+
+.contact form input[type="text"]::placeholder,
+.contact form input[type="email"]::placeholder {
+  font-weight: 300;
+}
+
+.contact form input[type="email"] {
+  margin-bottom: 4.375rem;
+}
+
+.contact form input[type="submit"] {
+  padding: 1.25rem 1.5rem;
+  font-weight: 700;
+  background: #ee4d47;
+  color: #ffffff;
+  border: none;
+  border-radius: 0.3125rem;
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
