--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -16,18 +16,6 @@ html {
   @media screen and (max-width: 75em) {
     font-size: 12px;
   }
-  //   @media screen and (max-width: 75em) {
-  //     font-size: 14px;
-  //   }
-  //   @media screen and (max-width: 75em) {
-  //     font-size: 14px;
-  //   }
-  //   @media screen and (max-width: 75em) {
-  //     font-size: 14px;
-  //   }
-  //   @media screen and (max-width: 75em) {
-  //     font-size: 14px;
-  //   }
 }
 ul {
   list-style: none;
@@ -169,7 +157,7 @@ header {
     font-size: 1.5rem;
     font-weight: 500;
     color: #402b2b;
-    border-left: 10px solid #ed4d47;
+    border-left: 0.625rem solid #ed4d47;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 
@@ -307,6 +295,8 @@ header {
       font-style: normal;
       font-weight: 500;
       position: relative;
+      cursor: pointer;
+      border-radius: 0.625rem;
 
       &::before {
         content: "";
@@ -317,11 +307,86 @@ header {
         width: 1.25rem;
         height: 1.25rem;
         transform: translateY(-50%);
-        cursor: pointer;
       }
     }
   }
   .answers {
     display: none;
+  }
+}
+
+.contact {
+  grid-column: 1/-2;
+  grid-row: 10/12;
+
+  background-image: url(/src/asset/footerBg.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 48rem;
+
+  display: grid;
+  grid-template-rows: 3.75rem 13.125rem auto 4.375rem 11.25rem max-content 8.25rem;
+  grid-template-columns: repeat(12, 1fr);
+
+  p {
+    grid-row: 3/4;
+    grid-column: 2/6;
+    color: #ffffff;
+    padding: 0.625rem 2.5rem;
+    padding-right: 0;
+    font-size: 1.25rem;
+    font-weight: 400;
+    line-height: 1.875rem;
+    border-left: 0.625rem solid #ed4d47;
+  }
+
+  form {
+    grid-row: 2/5;
+    grid-column: 7/12;
+    padding: 3.25rem 4.6875rem;
+    background-color: #ffffff;
+    border-radius: 0.625rem;
+    box-shadow: 0px 1.25rem 2.5rem 0px #ee4d471a;
+
+    label {
+      font-size: 1rem;
+      font-weight: 300;
+      line-height: 2.5rem;
+      margin-bottom: 0.625rem;
+    }
+    input[type="text"],
+    input[type="email"] {
+      height: 3.75rem;
+      width: 25rem;
+      border-radius: 0.3125rem;
+      border: 1px solid #ee4d4780;
+      margin-bottom: 1.875rem;
+      font-size: 1.125rem;
+      font-weight: 700;
+      line-height: 2.5rem;
+      padding: 0.75rem 2.5rem;
+      box-shadow: 0px 1.25rem 2.5rem 0px #ee4d4733;
+
+      &:focus {
+        border: 0.125rem solid #ee4d47;
+        outline: 0.125rem solid #ee4d47;
+      }
+      &::placeholder {
+        font-weight: 300;
+      }
+    }
+    input[type="email"] {
+      margin-bottom: 4.375rem;
+    }
+    input[type="submit"] {
+      padding: 1.25rem 1.5rem;
+      font-weight: 700;
+      background: #ee4d47;
+      color: #ffffff;
+      border: none;
+      border-radius: 0.3125rem;
+      cursor: pointer;
+    }
   }
 }
