--- a/src/style/style.css
+++ b/src/style/style.css
@@ -44,6 +44,7 @@ body {
   -ms-grid-rows: max-content max-content max-content;
       grid-template-rows: -webkit-max-content -webkit-max-content -webkit-max-content;
       grid-template-rows: max-content max-content max-content;
+  grid-row-gap: 7.5rem;
   background-color: #fef8f5;
   font-family: "Rubik", sans-serif;
 }
@@ -175,9 +176,9 @@ header nav ul li:last-child a {
 
 .about {
   grid-column: 3/-2;
-  -ms-grid-row: 6;
+  -ms-grid-row: 5;
   -ms-grid-row-span: 1;
-  grid-row: 6/7;
+  grid-row: 5/6;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 36rem max-content;
@@ -246,9 +247,9 @@ header nav ul li:last-child a {
 
 .how-to {
   grid-column: 3/-2;
-  -ms-grid-row: 7;
+  -ms-grid-row: 6;
   -ms-grid-row-span: 1;
-  grid-row: 7/8;
+  grid-row: 6/7;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: max-content auto;
@@ -303,9 +304,9 @@ header nav ul li:last-child a {
 
 .faq {
   grid-column: 3/-1;
-  -ms-grid-row: 8;
+  -ms-grid-row: 7;
   -ms-grid-row-span: 1;
-  grid-row: 8/9;
+  grid-row: 7/8;
   position: relative;
   z-index: 1;
   display: -ms-grid;
@@ -373,7 +374,7 @@ header nav ul li:last-child a {
   -ms-grid-row: 2;
   -ms-grid-row-span: 5;
   grid-row: 2/7;
-  background-image: url(/src//asset/faq.svg);
+  background-image: url(/src/asset/faq.svg);
   background-size: contain;
   background-repeat: no-repeat;
   width: 31.125rem;
@@ -439,14 +440,14 @@ header nav ul li:last-child a {
 
 .contact {
   grid-column: 1/-2;
-  -ms-grid-row: 10;
-  -ms-grid-row-span: 2;
-  grid-row: 10/12;
+  -ms-grid-row: 8;
+  -ms-grid-row-span: 6;
+  grid-row: 8/14;
   background-image: url(/src/asset/footerBg.svg);
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 48rem;
+  height: 46rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 3.75rem 13.125rem auto 4.375rem 11.25rem max-content 8.25rem;
@@ -546,5 +547,109 @@ header nav ul li:last-child a {
   border: none;
   border-radius: 0.3125rem;
   cursor: pointer;
+}
+
+footer {
+  grid-column: 2/-2;
+  -ms-grid-row: 13;
+  -ms-grid-row-span: 1;
+  grid-row: 13/14;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: max-content 3fr 2fr 1fr;
+      grid-template-columns: -webkit-max-content 3fr 2fr 1fr;
+      grid-template-columns: max-content 3fr 2fr 1fr;
+  grid-row-gap: 10.625rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .logo {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+footer .logo img {
+  width: 10.625rem;
+}
+
+footer nav {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+footer p {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.875rem;
+  color: #402b2b;
+}
+
+footer .socials {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  height: 2.25rem;
+}
+
+footer .socials li {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+footer .socials .facebook,
+footer .socials .twitter,
+footer .socials .instagram {
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 2.25rem;
+  height: 2.25rem;
+}
+
+footer .socials .facebook {
+  background-image: url(/src/asset/f.svg);
+}
+
+footer .socials .twitter {
+  background-image: url(/src/asset/t.svg);
+}
+
+footer .socials .instagram {
+  background-image: url(/src/asset/i.svg);
+}
+
+footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer ul a {
+  color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
