--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -28,6 +28,7 @@ body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: max-content max-content max-content;
+  grid-row-gap: 7.5rem;
   background-color: #fef8f5;
 
   font-family: "Rubik", sans-serif;
@@ -126,7 +127,7 @@ header {
 
 .about {
   grid-column: 3/-2;
-  grid-row: 6/7;
+  grid-row: 5/6;
 
   display: grid;
   grid-template-columns: 36rem max-content;
@@ -176,7 +177,7 @@ header {
 
 .how-to {
   grid-column: 3/-2;
-  grid-row: 7/8;
+  grid-row: 6/7;
 
   display: grid;
   grid-template-columns: max-content auto;
@@ -216,7 +217,7 @@ header {
 
 .faq {
   grid-column: 3/-1;
-  grid-row: 8/9;
+  grid-row: 7/8;
   position: relative;
   z-index: 1;
   &::after {
@@ -264,7 +265,7 @@ header {
   .man-thinking {
     grid-column: 2/3;
     grid-row: 2/7;
-    background-image: url(/src//asset/faq.svg);
+    background-image: url(/src/asset/faq.svg);
     background-size: contain;
     background-repeat: no-repeat;
     width: 31.125rem;
@@ -317,13 +318,13 @@ header {
 
 .contact {
   grid-column: 1/-2;
-  grid-row: 10/12;
+  grid-row: 8/14;
 
   background-image: url(/src/asset/footerBg.svg);
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 48rem;
+  height: 46rem;
 
   display: grid;
   grid-template-rows: 3.75rem 13.125rem auto 4.375rem 11.25rem max-content 8.25rem;
@@ -387,6 +388,74 @@ header {
       border: none;
       border-radius: 0.3125rem;
       cursor: pointer;
+    }
+  }
+}
+
+footer {
+  grid-column: 2/-2;
+  grid-row: 13/14;
+
+  display: grid;
+  grid-template-columns: max-content 3fr 2fr 1fr;
+  grid-row-gap: 10.625rem;
+  align-items: center;
+
+  .logo {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    img {
+      width: 10.625rem;
+    }
+  }
+  nav {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  p {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: 1.875rem;
+    color: #402b2b;
+  }
+  .socials {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    height: 2.25rem;
+
+    li {
+      width: fit-content;
+      height: fit-content;
+    }
+
+    .facebook,
+    .twitter,
+    .instagram {
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 2.25rem;
+      height: 2.25rem;
+    }
+
+    .facebook {
+      background-image: url(/src/asset/f.svg);
+    }
+    .twitter {
+      background-image: url(/src/asset/t.svg);
+    }
+    .instagram {
+      background-image: url(/src/asset/i.svg);
+    }
+  }
+
+  ul {
+    display: flex;
+    justify-content: space-between;
+
+    a {
+      color: #ffffff;
     }
   }
 }
