--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,15 +7,15 @@
 
 html {
   font-size: 16px;
-  @media screen and (max-width: 87.5em) {
-    font-size: 15.5px;
-  }
-  @media screen and (max-width: 81.25em) {
-    font-size: 14px;
-  }
-  @media screen and (max-width: 75em) {
-    font-size: 12px;
-  }
+  //   @media screen and (max-width: 87.5em) {
+  //     font-size: 15.5px;
+  //   }
+  //   @media screen and (max-width: 81.25em) {
+  //     font-size: 14.5px;
+  //   }
+  //   @media screen and (max-width: 75em) {
+  //     font-size: 13.6px;
+  //   }
 }
 ul {
   list-style: none;
@@ -38,7 +38,8 @@ header {
   padding: 1.5rem 0;
   //   background-color: yellowgreen;
   display: grid;
-  grid-template-columns: 1fr max-content 2fr max-content 1fr;
+  //   grid-template-columns: 1fr max-content 2fr max-content 1fr;
+  grid-template-columns: inherit;
   z-index: 5;
   position: fixed;
   left: 0;
@@ -47,10 +48,11 @@ header {
   align-items: center;
 
   .logo {
-    grid-column: 2/3;
+    grid-column: 2/4;
   }
   nav {
-    grid-column: 4/5;
+    grid-column: 7/12;
+    justify-self: flex-start;
     ul {
       display: flex;
 
@@ -82,16 +84,16 @@ header {
   background-image: url(/src/asset/back.svg);
   background-size: contain;
   background-repeat: no-repeat;
-  width: 100%;
   z-index: 0;
 
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 8rem max-content 3.75rem max-content 11.25rem max-content;
+  grid-template-columns: inherit;
+  grid-template-rows: 8rem max-content 3.75rem max-content 11.25rem 24.625rem;
+  grid-template-rows: 11.875rem max-content 3.75rem max-content 11.25rem 24.625rem;
   color: #ffffff;
 
   h1 {
-    grid-column: 2/7;
+    grid-column: 2/8;
     grid-row: 2/3;
     font-family: "DM Serif Display", serif;
     font-size: 6.25rem;
@@ -116,25 +118,23 @@ header {
   }
   .truck {
     grid-row: 6/7;
-    grid-column: 1/4;
+    grid-column: 1/6;
     background-image: url(/src/asset/mobel.svg);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 37.5rem;
-    height: 24.75rem;
   }
 }
 
 .about {
-  grid-column: 3/-2;
+  grid-column: 4/-2;
   grid-row: 5/6;
 
   display: grid;
-  grid-template-columns: 36rem max-content;
+  grid-template-columns: inherit;
   grid-template-rows: 4.625rem auto 2.5rem auto 4.375rem auto;
 
   h2 {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 2/3;
     font-size: 1.5rem;
     font-style: normal;
@@ -144,7 +144,7 @@ header {
     color: #ee4d47;
   }
   .classic {
-    grid-column: 1/2;
+    grid-column: 1/6;
     grid-row: 4/5;
     font-size: 1.125rem;
     font-weight: 300;
@@ -152,7 +152,7 @@ header {
     color: #402b2b;
   }
   .special {
-    grid-column: 1/2;
+    grid-column: 1/7;
     grid-row: 6/7;
     background: #fcddd4;
     font-size: 1.5rem;
@@ -165,13 +165,11 @@ header {
     padding: 1.875rem 3.419375rem;
   }
   .delivery-man {
-    grid-column: 2/3;
+    grid-column: 6/12;
     grid-row: 1/-1;
     background-image: url(/src//asset/about.svg);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 31.125rem;
-    height: 30rem;
   }
 }
 
@@ -180,12 +178,12 @@ header {
   grid-row: 6/7;
 
   display: grid;
-  grid-template-columns: max-content auto;
+  grid-template-columns: inherit;
   grid-template-rows: max-content 2.5rem auto;
 
   h2 {
     align-self: flex-end;
-    grid-column: 2/3;
+    grid-column: 6/9;
     grid-row: 1/2;
     font-size: 1.5rem;
     font-style: normal;
@@ -195,7 +193,7 @@ header {
     color: #ee4d47;
   }
   .classic {
-    grid-column: 2/3;
+    grid-column: 6/11;
     grid-row: 3/4;
     font-size: 1.125rem;
     font-weight: 300;
@@ -204,19 +202,17 @@ header {
   }
 
   .customer-care {
-    grid-column: 1/2;
+    grid-column: 1/6;
     grid-row: 1/-1;
 
     background-image: url(/src//asset/apply.svg);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 31.125rem;
-    height: 30rem;
   }
 }
 
 .faq {
-  grid-column: 3/-1;
+  grid-column: 4/-1;
   grid-row: 7/8;
   position: relative;
   z-index: 1;
@@ -228,16 +224,15 @@ header {
     left: 10%;
     bottom: 0;
     background: #fdede8;
-    border-top-left-radius: 100px;
+    border-top-left-radius: 6.25rem;
     z-index: 0;
   }
 
   display: grid;
-  grid-template-columns: subgrid;
+  grid-template-columns: inherit;
   grid-template-rows: 6.375rem 7.625rem max-content 2.75rem 12.5rem 5rem 5.625rem auto 13.875rem;
 
   h2 {
-    align-self: flex-end;
     grid-column: 1/2;
     grid-row: 3/4;
     font-size: 1.5rem;
@@ -247,10 +242,10 @@ header {
     letter-spacing: 0.1em;
     color: #ee4d47;
     z-index: 1;
-    align-self: flex-end;
+    align-self: center;
   }
   .classic {
-    grid-column: 1/2;
+    grid-column: 1/7;
     grid-row: 5/6;
     color: #402b2b;
     z-index: 1;
@@ -259,34 +254,32 @@ header {
     font-weight: 400;
     line-height: 4.1875rem;
     letter-spacing: 0em;
-    align-self: flex-start;
+    align-self: center;
   }
 
   .man-thinking {
-    grid-column: 2/3;
+    grid-column: 6/12;
     grid-row: 2/7;
     background-image: url(/src/asset/faq.svg);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 31.125rem;
-    height: 30rem;
     z-index: 1;
   }
   .questions {
     z-index: 1;
-    grid-column: 1/4;
+    grid-column: 1/13;
     grid-row: 8/9;
     display: grid;
-    grid-template-columns: repeat(2, 34.375rem) 1fr;
+    grid-template-columns: repeat(9, 1fr);
     grid-row-gap: 0.625rem;
     grid-column-gap: 1.25rem;
 
     & > li {
       &:nth-child(even) {
-        grid-column: 2/3;
+        grid-column: 5/9;
       }
       &:nth-child(odd) {
-        grid-column: 1/2;
+        grid-column: 1/5;
       }
 
       background-color: #ffffff;
@@ -323,12 +316,10 @@ header {
   background-image: url(/src/asset/footerBg.svg);
   background-size: contain;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 46rem;
 
   display: grid;
   grid-template-rows: 3.75rem 13.125rem auto 4.375rem 11.25rem max-content 8.25rem;
-  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: inherit;
 
   p {
     grid-row: 3/4;
@@ -340,54 +331,71 @@ header {
     font-weight: 400;
     line-height: 1.875rem;
     border-left: 0.625rem solid #ed4d47;
+    align-self: center;
   }
 
   form {
-    grid-row: 2/5;
+    grid-row: 2/4;
     grid-column: 7/12;
-    padding: 3.25rem 4.6875rem;
     background-color: #ffffff;
     border-radius: 0.625rem;
     box-shadow: 0px 1.25rem 2.5rem 0px #ee4d471a;
+
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: 3.25rem [label1-start] max-content [label1-end] 0.625rem [input1-start] max-content [input1-end] 1.875rem [label2-start] max-content [label2-end] 0.625rem [input2-start] max-content [input2-end] 30px [btn-start] max-content [btn-end] 3.25rem;
 
     label {
       font-size: 1rem;
       font-weight: 300;
       line-height: 2.5rem;
-      margin-bottom: 0.625rem;
+      grid-column: 2/-2;
+      &[for="userName"] {
+        grid-row: label1-start/label1-end;
+      }
+      &[for="email"] {
+        grid-row: label2-start/label2-end;
+      }
     }
-    input[type="text"],
-    input[type="email"] {
-      height: 3.75rem;
-      width: 25rem;
-      border-radius: 0.3125rem;
-      border: 1px solid #ee4d4780;
-      margin-bottom: 1.875rem;
-      font-size: 1.125rem;
-      font-weight: 700;
-      line-height: 2.5rem;
-      padding: 0.75rem 2.5rem;
-      box-shadow: 0px 1.25rem 2.5rem 0px #ee4d4733;
 
-      &:focus {
-        border: 0.125rem solid #ee4d47;
-        outline: 0.125rem solid #ee4d47;
+    input {
+      &[type="text"],
+      &[type="email"] {
+        grid-column: 2/-2;
+        border-radius: 0.3125rem;
+        border: 1px solid #ee4d4780;
+        outline: 0.125rem solid transparent;
+        font-size: 1.125rem;
+        font-weight: 700;
+        line-height: 2.5rem;
+        padding: 0.75rem 2.5rem;
+        box-shadow: 0px 1.25rem 2.5rem 0px #ee4d4733;
+
+        &:focus {
+          border: 0.125rem solid #ee4d47;
+          outline: 0.125rem solid #ee4d47;
+        }
+        &::placeholder {
+          font-weight: 300;
+        }
       }
-      &::placeholder {
-        font-weight: 300;
+      &[type="text"] {
+        grid-row: input1-start/input1-end;
       }
-    }
-    input[type="email"] {
-      margin-bottom: 4.375rem;
-    }
-    input[type="submit"] {
-      padding: 1.25rem 1.5rem;
-      font-weight: 700;
-      background: #ee4d47;
-      color: #ffffff;
-      border: none;
-      border-radius: 0.3125rem;
-      cursor: pointer;
+      &[type="email"] {
+        grid-row: input2-start/input2-end;
+      }
+      &[type="submit"] {
+        padding: 1.25rem 1.5rem;
+        font-weight: 700;
+        background: #ee4d47;
+        color: #ffffff;
+        border: none;
+        border-radius: 0.3125rem;
+        cursor: pointer;
+        grid-column: 2/5;
+        grid-row: btn-start/btn-end;
+      }
     }
   }
 }
@@ -397,23 +405,20 @@ footer {
   grid-row: 13/14;
 
   display: grid;
-  grid-template-columns: max-content 3fr 2fr 1fr;
+  grid-template-columns: inherit;
   grid-row-gap: 10.625rem;
   align-items: center;
 
   .logo {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 1/2;
-    img {
-      width: 10.625rem;
-    }
   }
   nav {
-    grid-column: 3/4;
+    grid-column: 8/12;
     grid-row: 1/2;
   }
   p {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 2/3;
     font-size: 1rem;
     font-weight: 300;
@@ -421,14 +426,11 @@ footer {
     color: #402b2b;
   }
   .socials {
-    grid-column: 3/4;
+    grid-column: 10/12;
     grid-row: 2/3;
-    height: 2.25rem;
-
-    li {
-      width: fit-content;
-      height: fit-content;
-    }
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5.75rem;
 
     .facebook,
     .twitter,
