--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,15 +7,21 @@
 
 html {
   font-size: 16px;
-  //   @media screen and (max-width: 87.5em) {
-  //     font-size: 15.5px;
-  //   }
-  //   @media screen and (max-width: 81.25em) {
-  //     font-size: 14.5px;
-  //   }
-  //   @media screen and (max-width: 75em) {
-  //     font-size: 13.6px;
-  //   }
+  @media screen and (max-width: 80em) {
+    font-size: 15px;
+  }
+  @media screen and (max-width: 75em) {
+    font-size: 13px;
+  }
+  @media screen and (max-width: 65em) {
+    font-size: 11px;
+  }
+  @media screen and (max-width: 53em) {
+    font-size: 10px;
+  }
+  @media screen and (max-width: 50em) {
+    font-size: 8px;
+  }
 }
 ul {
   list-style: none;
@@ -36,9 +42,8 @@ body {
 
 header {
   padding: 1.5rem 0;
-  //   background-color: yellowgreen;
   display: grid;
-  //   grid-template-columns: 1fr max-content 2fr max-content 1fr;
+  background-color: yellowgreen;
   grid-template-columns: inherit;
   z-index: 5;
   position: fixed;
@@ -71,10 +76,117 @@ header {
 
           a {
             background-color: #ee4d47;
-            border-radius: 0.25rem;
+            border-radius: 4px;
           }
         }
       }
+    }
+  }
+  #mobile-nav {
+    display: none;
+  }
+  .mobile-nav-btn {
+    display: none;
+    grid-column: 11/12;
+    grid-row: inherit;
+    justify-self: flex-end;
+  }
+  @media screen and (max-width: 48em) {
+    .mobile-nav-btn {
+      display: block;
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        // background-color: #ee4d47;
+        border-radius: 50%;
+        width: 3.5rem;
+        height: 3.5rem;
+        top: 0;
+        left: 0;
+        transform: translate(-25%, -50%);
+      }
+    }
+    nav {
+      display: none;
+      grid-column: 1/-1;
+      position: absolute;
+      top: 9.5rem;
+      left: 0;
+      right: 0;
+      justify-self: center;
+      background-color: yellowgreen;
+      opacity: 0;
+      visibility: hidden;
+      height: 100vh;
+      transition: all ease 0.5s;
+
+      ul {
+        flex-direction: column;
+        align-items: flex-end;
+
+        li {
+          a {
+            padding: 1.25rem 1.5rem;
+            font-size: 5rem;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+            color: #ffffff;
+          }
+
+          &:last-child {
+            margin-right: 0;
+
+            a {
+              background-color: transparent;
+            }
+          }
+        }
+      }
+    }
+
+    .mobile-nav-icon {
+      position: relative;
+      transition: all 0.1s ease;
+
+      &,
+      &::before,
+      &::after {
+        width: 1.5rem;
+        height: 0.1rem;
+        background-color: #fff;
+        display: inline-block;
+      }
+      &::before,
+      &::after {
+        position: absolute;
+        content: "";
+        left: 0;
+        transition: all 0.5s ease;
+      }
+      &::before {
+        top: 0.5rem;
+      }
+      &::after {
+        top: -0.5rem;
+      }
+    }
+
+    #mobile-nav:checked + .mobile-nav-btn .mobile-nav-icon {
+      background-color: transparent;
+    }
+    #mobile-nav:checked + .mobile-nav-btn .mobile-nav-icon::before {
+      top: 0;
+      transform: rotate(45deg);
+    }
+    #mobile-nav:checked + .mobile-nav-btn .mobile-nav-icon::after {
+      top: 0;
+      transform: rotate(-45deg);
+    }
+    #mobile-nav:checked ~ nav {
+      display: block;
+      opacity: 1;
+      visibility: visible;
     }
   }
 }
@@ -86,12 +198,21 @@ header {
   background-repeat: no-repeat;
   z-index: 0;
 
+  @media screen and (max-width: 42.5em) {
+    background-image: url(/src/asset/mobileBg.svg);
+    background-size: cover;
+    background-position: right;
+  }
+
   display: grid;
   grid-template-columns: inherit;
   grid-template-rows: 8rem max-content 3.75rem max-content 11.25rem 24.625rem;
   grid-template-rows: 11.875rem max-content 3.75rem max-content 11.25rem 24.625rem;
   color: #ffffff;
 
+  @media screen and (max-width: 53em) {
+    grid-template-rows: 11.875rem 32rem 3.75rem max-content 11.25rem;
+  }
   h1 {
     grid-column: 2/8;
     grid-row: 2/3;
@@ -102,19 +223,39 @@ header {
     font-weight: 400;
     letter-spacing: 0em;
     z-index: 1;
+    @media screen and (max-width: 42.5em) {
+      grid-column: 2/12;
+      font-size: 10.25rem;
+      line-height: 10.25rem;
+    }
+    @media screen and (max-width: 36.625em) {
+      font-size: 8.25rem;
+      line-height: 8.25rem;
+    }
+    @media screen and (max-width: 29.5em) {
+      font-size: 7.25rem;
+      line-height: 7.25rem;
+    }
+    @media screen and (max-width: 26.125em) {
+      font-size: 6.25rem;
+      line-height: 6.25rem;
+    }
   }
   .btn {
     grid-row: 4/5;
-    grid-column: 2/4;
+    grid-column: 2/7;
     padding: 1.25rem 1.5rem;
     background-color: #ee4d47;
-    border-radius: 0.25rem;
+    border-radius: 4px;
     justify-self: start;
     color: #ffffff;
     font-size: 1rem;
     font-weight: 700;
     letter-spacing: 0.05em;
     z-index: 1;
+    @media screen and (max-width: 42.5em) {
+      font-size: 2rem;
+    }
   }
   .truck {
     grid-row: 6/7;
@@ -122,6 +263,9 @@ header {
     background-image: url(/src/asset/mobel.svg);
     background-size: contain;
     background-repeat: no-repeat;
+    @media screen and (max-width: 53em) {
+      display: none;
+    }
   }
 }
 
@@ -134,7 +278,7 @@ header {
   grid-template-rows: 4.625rem auto 2.5rem auto 4.375rem auto;
 
   h2 {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 2/3;
     font-size: 1.5rem;
     font-style: normal;
@@ -170,6 +314,20 @@ header {
     background-image: url(/src//asset/about.svg);
     background-size: contain;
     background-repeat: no-repeat;
+  }
+  @media screen and (max-width: 41.875em) {
+    grid-column: 2/-2;
+    .special {
+      grid-column: 1/7;
+    }
+    .delivery-man {
+      grid-column: 6/13;
+    }
+  }
+  @media screen and (max-width: 34.0625em) {
+    .special {
+      grid-column: 1/9;
+    }
   }
 }
 
@@ -209,6 +367,12 @@ header {
     background-size: contain;
     background-repeat: no-repeat;
   }
+  @media screen and (max-width: 41.875em) {
+    grid-column: 2/-2;
+    .classic {
+      grid-column: 6/12;
+    }
+  }
 }
 
 .faq {
@@ -216,6 +380,9 @@ header {
   grid-row: 7/8;
   position: relative;
   z-index: 1;
+  @media screen and (max-width: 41.875em) {
+    grid-column: 2/-1;
+  }
   &::after {
     content: "";
     position: absolute;
@@ -277,9 +444,17 @@ header {
     & > li {
       &:nth-child(even) {
         grid-column: 5/9;
+        @media screen and (max-width: 30em) {
+          grid-column: 1/9;
+          margin-bottom: 1rem;
+        }
       }
       &:nth-child(odd) {
         grid-column: 1/5;
+        @media screen and (max-width: 30em) {
+          grid-column: 1/9;
+          margin-bottom: 1rem;
+        }
       }
 
       background-color: #ffffff;
@@ -290,12 +465,13 @@ header {
       font-weight: 500;
       position: relative;
       cursor: pointer;
-      border-radius: 0.625rem;
+      border-radius: 10px;
 
       &::before {
         content: "";
         position: absolute;
         background-image: url(/src/asset/+.svg);
+        background-size: contain;
         right: 2.1875rem;
         top: 50%;
         width: 1.25rem;
@@ -320,6 +496,17 @@ header {
   display: grid;
   grid-template-rows: 3.75rem 13.125rem auto 4.375rem 11.25rem max-content 8.25rem;
   grid-template-columns: inherit;
+  align-self: flex-end;
+  @media screen and (max-width: 40.625em) {
+    grid-column: 1/-1;
+
+    background-size: cover;
+    background-position: right;
+  }
+
+  @media screen and (max-width: 26.5625em) {
+    grid-template-rows: 14.625rem 5.125rem auto 2rem auto 20rem;
+  }
 
   p {
     grid-row: 3/4;
@@ -332,14 +519,22 @@ header {
     line-height: 1.875rem;
     border-left: 0.625rem solid #ed4d47;
     align-self: center;
+    @media screen and (max-width: 26.5625em) {
+      grid-column: 2/-2;
+    }
   }
 
   form {
     grid-row: 2/4;
     grid-column: 7/12;
     background-color: #ffffff;
-    border-radius: 0.625rem;
+    border-radius: 10px;
     box-shadow: 0px 1.25rem 2.5rem 0px #ee4d471a;
+
+    @media screen and (max-width: 26.5625em) {
+      grid-column: 2/-2;
+      grid-row: 5/6;
+    }
 
     display: grid;
     grid-template-columns: repeat(9, 1fr);
@@ -362,7 +557,7 @@ header {
       &[type="text"],
       &[type="email"] {
         grid-column: 2/-2;
-        border-radius: 0.3125rem;
+        border-radius: 5px;
         border: 1px solid #ee4d4780;
         outline: 0.125rem solid transparent;
         font-size: 1.125rem;
@@ -391,10 +586,11 @@ header {
         background: #ee4d47;
         color: #ffffff;
         border: none;
-        border-radius: 0.3125rem;
+        border-radius: 5px;
         cursor: pointer;
         grid-column: 2/5;
         grid-row: btn-start/btn-end;
+        justify-self: flex-start;
       }
     }
   }
@@ -409,28 +605,55 @@ footer {
   grid-row-gap: 10.625rem;
   align-items: center;
 
+  @media screen and (max-width: 26.5625em) {
+    grid-column: 1/-1;
+    grid-row-gap: 1.625rem;
+    grid-row: 13/15;
+    background-color: #0f264c;
+  }
+
   .logo {
     grid-column: 1/3;
     grid-row: 1/2;
+    @media screen and (max-width: 26.5625em) {
+      grid-column: 2/4;
+    }
   }
   nav {
     grid-column: 8/12;
     grid-row: 1/2;
+    @media screen and (max-width: 26.5625em) {
+      grid-column: 2/5;
+      grid-row: 2/3;
+    }
   }
   p {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 2/3;
     font-size: 1rem;
     font-weight: 300;
     line-height: 1.875rem;
     color: #402b2b;
+    align-self: start;
+    @media screen and (max-width: 40.625em) {
+      color: #ffffff;
+    }
+    @media screen and (max-width: 26.5625em) {
+      grid-row: 3/4;
+      grid-column: 2/5;
+    }
   }
   .socials {
     grid-column: 10/12;
     grid-row: 2/3;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5.75rem;
+    margin-bottom: 0.75rem;
+
+    @media screen and (max-width: 26.5625em) {
+      grid-column: 9/12;
+      grid-row: 3/4;
+    }
 
     .facebook,
     .twitter,
@@ -439,6 +662,7 @@ footer {
       background-repeat: no-repeat;
       width: 2.25rem;
       height: 2.25rem;
+      cursor: pointer;
     }
 
     .facebook {
@@ -455,6 +679,13 @@ footer {
   ul {
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: 26.5625em) {
+      flex-direction: column;
+
+      li {
+        margin-bottom: 1rem;
+      }
+    }
 
     a {
       color: #ffffff;
